2009-03-05  Simone Fiorentino  <simone.fiorentino@consulenti.fastweb.it>

        Bug 24382: request to add SH4 platform

        <https://bugs.webkit.org/show_bug.cgi?id=24382>

        Reviewed by David Kilzer.

        * wtf/Platform.h: Added support for SH4 platform.

2009-03-05  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Writes of constant values to SF registers should be made with direct memory
        writes where possible, rather than moving the value via a hardware register.

        ~3% win on SunSpider tests on x86, ~1.5% win on v8 tests on x86-64.

        * assembler/MacroAssemblerX86_64.h:
        (JSC::MacroAssemblerX86_64::storePtr):
        * assembler/X86Assembler.h:
        (JSC::X86Assembler::movq_i32m):
        * jit/JIT.cpp:
        (JSC::JIT::privateCompileMainPass):

2009-03-05  Mark Rowe  <mrowe@apple.com>

        Fix the build.

        Sprinkle "static" around NumberConstructor.cpp in order to please the compiler.

        * runtime/NumberConstructor.cpp:
        (JSC::numberConstructorNaNValue):
        (JSC::numberConstructorNegInfinity):
        (JSC::numberConstructorPosInfinity):
        (JSC::numberConstructorMaxValue):
        (JSC::numberConstructorMinValue):

2009-03-04  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver Hunt.

        <rdar://problem/6354858> FastMallocZone's enumeration code reports fragmented administration space

        The handling of MALLOC_ADMIN_REGION_RANGE_TYPE in FastMalloc's zone was incorrect.  It was attempting
        to record the memory containing and individual span as an administrative region, when all memory
        allocated via MetaDataAlloc should in fact be recorded.  This was causing memory regions allocated
        via MetaDataAlloc to appear as "VM_ALLOCATE ?" in vmmap output.  They are now correctly reported as
        "MALLOC_OTHER" regions associated with the JavaScriptCore FastMalloc zone.
