@@ -311,9 +311,15 @@ void JIT::privateCompileMainPass()
                 storePtr(ImmPtr(JSValuePtr::encode(getConstantOperand(src))), Address(callFrameRegister, dst * sizeof(Register)));
                 if (dst == m_lastResultBytecodeRegister)
                     killLastResultRegister();
-            } else {
+            } else if ((src == m_lastResultBytecodeRegister) || (dst == m_lastResultBytecodeRegister)) {
+                // If either the src or dst is the cached register go though
+                // get/put registers to make sure we track this correctly.
                 emitGetVirtualRegister(src, regT0);
                 emitPutVirtualRegister(dst);
+            } else {
+                // Perform the copy via regT1; do not disturb any mapping in regT0.
+                loadPtr(Address(callFrameRegister, src * sizeof(Register)), regT1);
+                storePtr(regT1, Address(callFrameRegister, dst * sizeof(Register)));
             }
             NEXT_OPCODE(op_mov);
         }
